--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,13 @@ body{
 	font-size: 30px;
 	text-align: center;
 }
-/*ul{
+ul{
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
 }
-
+/*
 li a{
 	display: block;
 	color: black;
